--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "jthistlethwaite/template-engine",
   "description": "Light-weight engine for document templating and language translation",
-  "minimum-stability": "dev",
   "license": "BSD",
+  "version": "stable",
   "autoload": {
     "psr-0": {
       "jthistlethwaite\\template-engine": "src"
