--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "version": "stable",
   "autoload": {
     "psr-4": {
-      "jthistlethwaite\\templateEngine": "src"
+      "jthistlethwaite\\templateEngine\\": "src"
     }
   }
 }
